--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
       animation: glow-celeste 2s ease-in-out infinite alternate;
       letter-spacing: 2px;
       margin-bottom: 0.2em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 18px;
+      flex-wrap: wrap;
     }
 
     @keyframes glow {
@@ -277,8 +282,13 @@
       animation: glow-celeste 2s ease-in-out infinite alternate;
       letter-spacing: 2px;
       margin-bottom: 0.2em;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 18px;
+      flex-wrap: wrap;
     ">
-      💙💙 Celeste 💙💙
+      🔥🔥 NKD PEREIRA 🔥🔥
     </h1>
   </header>
 
