--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
       gap: 18px;
       flex-wrap: wrap;
     ">
-      🔥🔥 NKD PEREIRA 🔥🔥
+      💙💙 Yerson te amo bb 💙💙
     </h1>
   </header>
 
