--- a/index.html
+++ b/index.html
@@ -426,6 +426,117 @@
       };
     });
   </script>
+  <script>
+// Bloquear acceso a iPhone
+document.addEventListener("DOMContentLoaded", function() {
+  var esIphone = /iPhone/i.test(navigator.userAgent);
+  if (esIphone) {
+    document.body.innerHTML = `
+      <div style="
+        position: fixed;
+        top: 0; left: 0; right: 0; bottom: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(270deg, #000000, #1a1a1a, #ff0000, #00cfff);
+        background-size: 800% 800%;
+        animation: fondoAnimado 16s ease infinite;
+        z-index: 99999;
+      ">
+        <h1 style="color:#fff; font-size:2em; text-align:center;">
+          🚫 Acceso bloqueado 🚫<br>
+          No se permite el acceso desde iPhone.
+        </h1>
+      </div>
+      <style>
+        @keyframes fondoAnimado {
+          0% {background-position:0% 50%}
+          50% {background-position:100% 50%}
+          100% {background-position:0% 50%}
+        }
+      </style>
+    `;
+    return;
+  }
+
+  // Bloqueo si intentan inspeccionar o copiar el código
+  document.addEventListener("contextmenu", function(e) {
+    e.preventDefault();
+    document.body.innerHTML = `
+      <div style="
+        position: fixed;
+        top: 0; left: 0; right: 0; bottom: 0;
+        width: 100vw;
+        height: 100vh;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background: linear-gradient(270deg, #000000, #1a1a1a, #ff0000, #00cfff);
+        background-size: 800% 800%;
+        animation: fondoAnimado 16s ease infinite;
+        z-index: 99999;
+      ">
+        <h1 style="color:#fff; font-size:2em; text-align:center;">
+          🚫 Acceso bloqueado 🚫<br>
+          No intentes copiar ni inspeccionar esta página.
+        </h1>
+      </div>
+      <style>
+        @keyframes fondoAnimado {
+          0% {background-position:0% 50%}
+          50% {background-position:100% 50%}
+          100% {background-position:0% 50%}
+        }
+      </style>
+    `;
+  });
+
+  document.addEventListener("keydown", function(e) {
+    // F12, Ctrl+Shift+I, Ctrl+U, Ctrl+S, Ctrl+C, Ctrl+Shift+C
+    if (
+      e.key === "F12" ||
+      (e.ctrlKey && e.shiftKey && (e.key === "I" || e.key === "C")) ||
+      (e.ctrlKey && (e.key === "U" || e.key === "S" || e.key === "C"))
+    ) {
+      e.preventDefault();
+      document.body.innerHTML = `
+        <div style="
+          position: fixed;
+          top: 0; left: 0; right: 0; bottom: 0;
+          width: 100vw;
+          height: 100vh;
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          background: linear-gradient(270deg, #000000, #1a1a1a, #ff0000, #00cfff);
+          background-size: 800% 800%;
+          animation: fondoAnimado 16s ease infinite;
+          z-index: 99999;
+        ">
+          <h1 style="color:#fff; font-size:2em; text-align:center;">
+            🚫 Acceso bloqueado 🚫<br>
+            No intentes copiar ni inspeccionar esta página.
+          </h1>
+        </div>
+        <style>
+          @keyframes fondoAnimado {
+            0% {background-position:0% 50%}
+            50% {background-position:100% 50%}
+            100% {background-position:0% 50%}
+          }
+        </style>
+      `;
+    }
+  });
+
+  // ...el resto de tu código existente para la edad...
+});
+</script>
   <div id="tsparticles"></div>
 
   <header>
@@ -442,7 +553,7 @@
       gap: 18px;
       flex-wrap: wrap;
     ">
-      💙💙 Yerson te amo bb 💙💙
+      🔥🔥 NKD PEREIRA 🔥🔥
     </h1>
   </header>
 
