Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NKD PEREIRA 🔥</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
-  <
-    script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2.11.1/tsparticles.bundle.min.js"></script>
   <style>
     * {
       box-sizing: border-box;
@@ -428,6 +427,7 @@
     });
   </script>
   <script>
+
   // Bloqueo si intentan inspeccionar o copiar el código
   document.addEventListener("contextmenu", function(e) {
     e.preventDefault();
